--- a/ready2work/src/App.css
+++ b/ready2work/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.NavDiv{
   display: flex;
-  flex-direction: column;
+  justify-content: right;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-bottom: 2px solid grey;
+  padding-right: 50px;
+  padding-left: 50px;
 }
-
-.App-link {
-  color: #61dafb;
+.elementsNav{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width:25%
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link{
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
 }
