--- a/ready2work/src/App.css
+++ b/ready2work/src/App.css
@@ -35,12 +35,17 @@
 .logo{
   width: 100px;
 }
+/*Front Page*/
+.picFront{
+  width: 100%;
+  height: 95vh;
+  text-align: right;
+}
 
 
 
 
-
-
+/*SearchBar*/
 
 .bar{
   margin:0 auto;
