--- a/ready2work/src/App.css
+++ b/ready2work/src/App.css
@@ -1,4 +1,4 @@
-body{
+*{
   font-family: 'Open Sans', sans-serif;
 }
 /*NavBar*/
@@ -150,6 +150,7 @@ a:hover:after{
 
 .findjobs{
   text-align: center;
+  font-size: 40px;
 }
 
 
@@ -160,4 +161,63 @@ a:hover:after{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/*Job Search Page*/
+.jobSearchMainDiv{
+ 
+}
+.jobSearchContainer{
+  border: 2px solid rgb(173, 168, 168);
+  border-radius: 20px;
+  margin-top: 50px;
+  padding-bottom: 20px;
+  text-justify: auto;
+  text-align:justify;
+}
+.titleJob{
+  color: #06114F;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+/*Jobs Post Page*/
+.postMainDiv{
+ display: flex;
+ justify-content: center;
+ height: 100vh;
+}
+.jobPostPage{
+  border: 2px solid grey;
+  width: 30%;
+  height: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align:justify;
+  border-radius: 20px;
+}
+.jobPostForm{
+  width: 100%;
+  margin-bottom: 20px;
+}
+.labelPostForm{
+  font-weight: bold;
+}
+.divPostFormBtn{
+  background-color: #06114F;
+}
+.jobPostBtn{
+  width: 100%;
+  height: 50px;
+  border:0px;
+  background-color: #06114F;
+  color: white;
+  font-size: 20px;
+}
+.h1Form{
+  text-align: center;
+  margin-bottom: 100px;
+  margin-top: 100px;
+  font-size: 40px;
 }
