--- a/src/App.css
+++ b/src/App.css
@@ -107,12 +107,73 @@
   color: white;
   /*text-shadow:4px 4px #030302;*/
 }
-.h1{
+@keyframes AnimText {
+
+  0% { opacity: 0;
+  
+  font-size:0px;
+  
+  }
+  
+  80% { opacity: 0;
+  
+  font-size:25px;
+  
+  }
+  
+  100% { opacity: 1;
+  
+  font-size:50px;
+  
+  }
+  
+  }
+  
+  @keyframes AnimText2 {
+  
+  0% { opacity: 0;
+  
+  font-size:0px;
+  
+  }
+  
+  80% { opacity: 0;
+  
+  font-size:10px;
+  
+  }
+  
+  100% { opacity: 1;
+  
+  font-size:30px;
+  
+  }
+  
+  }
+  
+  .h1{
+  
   font-size: 50px;
-}
-.h2{
+  
+  animation:normal;
+  
+  animation-name: AnimText;
+  
+  animation-duration: 2s;
+  
+  }
+  
+  .h2{
+  
   font-size: 30px;
-}
+  
+  animation:normal;
+  
+  animation-name: AnimText2;
+  
+  animation-duration: 4s;
+  
+  }
 
   /*Input*/
   
@@ -393,4 +454,46 @@ width: 50%;
 .editBtnProfile:hover{
   background-color:#06114F;
 }
+/*Edit Post Jobs*/
+.EditJobPost{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: linear-gradient(to top, #F5F7FA,#667ea2,rgb(161,84,240));
+  padding-bottom: 10%;
+  min-height: 90vh;
+  height: auto;
+}
+.h3EditJob{
+  font-size: 40px;
 
+}
+.editJobDiv{
+  width: 30%;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+background-color: rgba(66, 97, 170, 0.43);
+min-height: 50vh;
+border-radius: 10px;
+padding-top: 50px;
+padding-bottom: 20px;
+border: #06114F 5px solid ;
+box-shadow:  5px 10px 8px #252527;
+}
+.formEditJob{
+width: 50%;
+
+  
+}
+.inputEditJobForm{
+  width: 100%;
+  margin-bottom: 20px;
+}
+.btnsFormEdit{
+  display: flex;
+  justify-content: space-between;
+margin-top:10px ;
+}
